muoni/GraalVM/language/tests/error/InvalidAssignmentInAssignment.hn
fn main() {
  x = 42 = 42;
}